@@ -1,5 +1,5 @@
-DIST nmon_x86_12a.zip 515920 RMD160 e54d18e121c58058899d8439529496115509004c SHA1 561f31dbbf8bf3fca74bb1635c1a0714805fa830 SHA256 e2494c80284015ed2ece462bc7ec91fc0347ab789154a962d38c1b980462d933
-DIST nmon_x86_64_12a.zip 258584 RMD160 16e179eeca0e9ce2c0bac0792fb7ff3f3539864b SHA1 f2590ab27c816f1870311f37c9a9cd330859d3a8 SHA256 24c15cade00090be0ee2d4cfca1d4b8332fb2862166c5be8a3e47a75a1547964
-EBUILD nmon-12a.ebuild 748 RMD160 f7a8a99942b6a99868e0bf88eb0a6c84023eabc3 SHA1 7c7cf2e5255846e429a9338255f2cdc027804b9c SHA256 268e7f9c6fcdb44a2303ba181a081eae828da2dc205c558ff966ae26564b11d4
-MISC ChangeLog 261 RMD160 1cbd1971989c2d18a6d283e27de9159dff083d00 SHA1 5eebe1f3c36aa533ed8bd42b075c03a20b9c33e9 SHA256 7bd0ae39bd0caad394c6a3c4ea0ff7a79b5f528cd21e4f90094fcad220758604
+DIST lmon13g.c 160425 RMD160 1880e7de2e00209f9201c20076552ec1d14e7777 SHA1 5e35e88dc13f044bfb7f16abe37b504c0a3bb79b SHA256 456ab2a342b31d1a352d0d940af5962fa65a12ae8757ff73e6e73210832ae8b5
+DIST nmon-13g_makefile 2484 RMD160 1c637bd8017001fb0c9eb56399717b95d5cdba9a SHA1 25d6c5c57d6a6cd88551862367c603b9800533cd SHA256 4573e76d3d9a8604cb980a222fb25376269100c553fb7f0c025e853004efeca7
+EBUILD nmon-13g.ebuild 796 RMD160 62b12ea27aa6685640a1ff3234050937b5e5e72c SHA1 7b334bf9d95686501b22e377c896211e21585acf SHA256 04621546744b0c6a7d29fd2974a03197606f06c28bd8c6a49a26f67ac5dd3ed5
+MISC ChangeLog 413 RMD160 12d8ebbf05afb3276c64219c299af65f11699177 SHA1 c7667e3da4efacf72308e3243b886f978c75aa7b SHA256 69819579c1133a0e411d58be0419ad49c8e0468fdd3e2e3b0a06fbe1411e2e8f
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
