@@ -1,6 +1,10 @@
 # ChangeLog for sys-process/nmon
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  04 Apr 2010; Piotr Szymaniak <lazy_bum@o2.pl> -nmon-12a.ebuild,
+  +nmon-13g.ebuild:
+  Version bump thanks to Alexander Miroshnichenko (bug #132948).
 
   04 Apr 2009; Piotr Szymaniak <lazy_bum@o2.pl> +nmon-12a.ebuild,
   +metadata.xml:
